Allow the user to customize the image

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <html>
   <head>
     <title>Gif.js Probe</title>
-    <style>
-      img {
-          display: none;
-      }
-    </style>
   </head>
   <body>
+    <div><input id="custom-file" type="file" /></div>
+    <img id="custom-preview" src="tsodinClown.png" style="display: none;" />
     <canvas id="preview" width="112" height="112"></canvas>
-    <img id="emote" src="tsodinClown.png" />
     <script src="./gif.js"></script>
     <script src="./index.js"></script>
   </body>
