Implement the "Render" button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <div><input id="custom-file" type="file" /></div>
     <img id="custom-preview" src="tsodinClown.png" style="display: none;" />
     <canvas id="preview" width="112" height="112"></canvas>
+    <div><input id="render" type="submit" value="Render" /></div>
     <script src="./gif.js"></script>
     <script src="./index.js"></script>
   </body>
