Preview the rendered GIF right on the page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <h2>Render</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
     <div class="widget">
+      <img id="render-preview" class="widget-element" />
       <div class="widget-element"><input id="render" type="submit" value="Render" /></div>
     </div>
     <script src="./gif.js"></script>
