--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Gif.js Probe</title>
+    <title>emoteJAM &mdash; Generate animated emotes from static images</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
   </head>
