Add Support section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       <p>By clicking "Render" you confirm that you have all of the necessary permissions from the respective copyright holders to process this image. Since all of the image processing/generation is done on your machine emoteJAM developers disclaim all the responsibility for any copyright violations done using this website.</p>
       <p>Feel free to scroll back and start over. Have fun!</p>
     </div>
+
+    <h2>4. Support</h2>
+    <p>I dunno, if you are interested in programming go watch my <a href="https://www.twitch.tv/tsoding">dying Twitch channel</a> (I coded this website there live btw).</p>
+    <p>Also, the entire website is <a href="https://github.com/tsoding/emoteJAM">Open Source and available on GitHub</a>. If you are familiar with JavaScript, HTML5, CSS3, WebGL and/or GLSL your contributions are welcome!</p>
     <script src="./gif.js"></script>
     <script src="./index.js"></script>
   </body>
