--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div id="render-spinner" class="spinning-wheel" style="display: none"></div>
       </div>
       <img id="render-preview" class="widget-element" />
+      <div class="widget-element"><a id="render-download" style="display: none"><input type="submit" value="Download" /></a></div>
       <p>By clicking "Render" you confirm that you have all of the necessary permissions from the respective copyright holders to process this image. Since all of the image processing/generation is done on your machine emoteJAM developers disclaim all the responsibility for any copyright violations done using this website.</p>
       <p>Feel free to scroll back and start over. Have fun!</p>
     </div>
