--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       <div class="widget-element">
         Filter: <select id="presets"></select>
       </div>
+      <div class="gif-js-opts">
+        <div><input class="canvas-size-input" id="canvas-width-input" type="text" onkeypress="return !isNaN(event.key)" value="112" placeholder="width" maxlength="5" /></div>
+        <div style="font-size: 80%;">x</div>
+        <div><input class="canvas-size-input" id="canvas-height-input" type="text" onkeypress="return !isNaN(event.key)" value="112" placeholder="height" maxlength="5" /></div>
+        <div style="font-size: 80%;">px</div>
+      </div>
       <canvas id="preview" width="112" height="112" class="widget-element"></canvas>
     </div>
 
