fix annoying onload transition

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
+  <body class="preload">
     <h1><span id="theme-changer">emoteJAM</span></h1>
 
     <p>Welcome to emoteJAM &mdash; a simple website that generates animated <a href="https://betterttv.com/">BTTV</a> emotes from static images. Let's get started!</p>
