Get rid of the notion of "presets"
Rename the to "filters"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="widget">
       <div class="widget-element">
-        Filter: <select id="presets"></select>
+        Filter: <select id="filters"></select>
       </div>
       <canvas id="preview" width="112" height="112" class="widget-element"></canvas>
     </div>
