Add a placeholder effect if shader is loading for too long

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h2>2. Select a Filter</h2>
     <p>The image below is not a GIF yet. It's just a preview of how the filter looks like when applied to the image you've selected. Try different filters and pick the one you want.</p>
 
-    <div class="widget">
-      <div class="widget-element">
+    <div class="widget" id="widget-filter">
+      <div class="widget-element" id="select-filters">
         Filter: <select id="filters"></select>
       </div>
       <canvas id="preview" width="112" height="112" class="widget-element"></canvas>
