--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <p>112x112 static images are prefered but you can try to select any image and see what happens. This does not upload the image anywhere. emoteJAM works entirely in your browser without any server behind it.</p>
 
-    <div id="imageSelectorEntry"></div>
+    <div id="image-selector-entry"></div>
 
     <p>After you selected the image move on the next section to select a Filter!</p>
 
     <h2>2. Select a Filter</h2>
     <p>The image below is not a GIF yet. It's just a preview of how the filter looks like when applied to the image you've selected. Try different filters and pick the one you want.</p>
 
-    <div id="filterSelectorEntry"></div>
+    <div id="filter-selector-entry"></div>
 
     <p>Bright green color is going to be transparent when the actual final GIF is rendered. There is no way to change that yet (but we are working on it). If your image contains that color I'm deeply sorry!</p>
 
