Added fetchers for shaders

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="gif.js"></script>
     <script src="js/grecha.js"></script>
     <script src="js/eval.js"></script>
+    <script src="js/fetchers.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/index.js"></script>
   </body>
